--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,6 @@
 	<title>Hello Alien</title>
 </head>
 <body>
-<h1> Hello Alien! </h1>
+<h1> Hello Coursera! It's a great course! </h1>
 </body>
 </html>
